syntax = "proto3";

package org.examples.hotel.grpc;

import "common.proto";
import "hotel.proto";

option java_multiple_files = true;
option java_package = "org.examples.hotel.grpc.agency";
option java_outer_classname = "AgencyServiceProto";

/**
 * Service d'agence pour agréger les offres de plusieurs hôtels
 * Remplace les services REST des agences
 */
service AgencyService {
  // Rechercher dans tous les hôtels avec streaming des résultats
  rpc SearchAllHotels(AgencySearchRequest) returns (stream Offer);

  // Rechercher et attendre tous les résultats
  rpc SearchAllHotelsSync(AgencySearchRequest) returns (AgencySearchResponse);

  // Comparer des offres spécifiques
  rpc CompareOffers(ComparisonRequest) returns (ComparisonResponse);

  // Obtenir la liste des hôtels partenaires
  rpc GetPartnerHotels(PartnerHotelsRequest) returns (PartnerHotelsResponse);

  // Faire une réservation via l'agence (avec commission)
  rpc MakeReservationViaAgency(AgencyReservationRequest) returns (Reservation);

  // Obtenir les statistiques de l'agence
  rpc GetAgencyStats(StatsRequest) returns (AgencyStats);
}

// ==================== Messages de Requête ====================

/**
 * Requête de recherche pour l'agence
 */
message AgencySearchRequest {
  SearchRequest base_search = 1;  // Critères de base
  repeated string hotel_ids = 2;  // Liste d'hôtels (vide = tous)
  bool include_unavailable = 3;  // Inclure les offres indisponibles
  SortCriteria sort = 4;  // Critère de tri
  int32 max_results = 5;  // Limite de résultats
  string agency_name = 6;  // Nom de l'agence
}

/**
 * Critères de tri
 */
message SortCriteria {
  enum SortField {
    SORT_FIELD_PRICE = 0;
    SORT_FIELD_STARS = 1;
    SORT_FIELD_DISTANCE = 2;
    SORT_FIELD_NAME = 3;
  }

  enum SortOrder {
    SORT_ORDER_ASC = 0;
    SORT_ORDER_DESC = 1;
  }

  SortField field = 1;
  SortOrder order = 2;
}

/**
 * Requête de comparaison d'offres
 */
message ComparisonRequest {
  repeated string offer_ids = 1;  // IDs des offres à comparer
  repeated string criteria = 2;  // Critères de comparaison
}

/**
 * Requête pour obtenir les hôtels partenaires
 */
message PartnerHotelsRequest {
  string agency_name = 1;
  bool include_stats = 2;  // Inclure les statistiques
}

/**
 * Requête de réservation via agence
 */
message AgencyReservationRequest {
  ReservationRequest base_reservation = 1;
  string agency_name = 2;
  double commission_rate = 3;  // Taux de commission
  string agency_reference = 4;  // Référence interne agence
}

/**
 * Requête de statistiques
 */
message StatsRequest {
  string agency_name = 1;
  DateRange date_range = 2;
  bool include_hotel_breakdown = 3;
}

// ==================== Messages de Réponse ====================

/**
 * Réponse de recherche synchrone
 */
message AgencySearchResponse {
  repeated Offer offers = 1;
  int32 total_count = 2;
  map<string, int32> hotel_counts = 3;  // Nombre d'offres par hôtel
  map<string, string> hotel_errors = 4;  // Erreurs par hôtel
  int64 search_duration_ms = 5;  // Durée de la recherche
  AgencySearchRequest original_request = 6;
}

/**
 * Réponse de comparaison
 */
message ComparisonResponse {
  repeated OfferComparison comparisons = 1;
  OfferRecommendation recommendation = 2;  // Meilleure offre
}

/**
 * Comparaison d'une offre
 */
message OfferComparison {
  Offer offer = 1;
  double value_score = 2;  // Score qualité/prix (0-100)
  repeated string pros = 3;  // Avantages
  repeated string cons = 4;  // Inconvénients
  map<string, string> comparison_details = 5;  // Détails de comparaison
}

/**
 * Recommandation d'offre
 */
message OfferRecommendation {
  Offer best_offer = 1;
  string reason = 2;  // Raison de la recommandation
  double confidence_score = 3;  // Score de confiance (0-1)
}

/**
 * Réponse avec les hôtels partenaires
 */
message PartnerHotelsResponse {
  repeated PartnerHotel hotels = 1;
  int32 total_partners = 2;
}

/**
 * Informations sur un hôtel partenaire
 */
message PartnerHotel {
  HotelInfo hotel = 1;
  double commission_rate = 2;
  bool active = 3;
  int32 total_reservations = 4;  // Nombre total de réservations
  double total_revenue = 5;  // Revenu total généré
  int64 partnership_since = 6;  // Date de partenariat (timestamp)
}

/**
 * Statistiques de l'agence
 */
message AgencyStats {
  string agency_name = 1;
  int32 total_searches = 2;
  int32 total_reservations = 3;
  double total_revenue = 4;
  double total_commission = 5;
  map<string, int32> reservations_by_hotel = 6;
  map<string, double> revenue_by_hotel = 7;
  DateRange period = 8;
  double average_reservation_value = 9;
  double conversion_rate = 10;  // Taux de conversion recherche -> réservation
}

/**
 * Message d'erreur pour le streaming
 */
message StreamError {
  string hotel_id = 1;
  ServiceError error = 2;
}

